style(index.html, style.css): improve code readability and add hover effect to footer image feat(index.html): add CodeYourFuture logo to footer fix(index.html): fix formatting and add alt attribute to footer image tag

--- a/style.css
+++ b/style.css
@@ -291,14 +291,20 @@ h2:hover {
 }
 
 .footer__img {
-  max-width: 10%;
-  max-height: 320px;
-  object-fit: cover;
+  width: 101.3px;
+  height: 32px;
   background: #fff;
 }
 .footer__img:hover {
   opacity: 0.7;
+  transition: all 0.3s ease-in;
 }
+
+.footer__img img {
+  height: 100%;
+  width: 100%;
+}
+
 a {
   color: #fff;
   text-decoration: none;
